--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://szam5.com"
+baseURL = "https://vbatushev.github.io/szam5hugo"
 languageCode = "ru-ru"
 title = "sZam5"
 enableRobotsTXT = true
